--- a/index.html
+++ b/index.html
@@ -239,12 +239,7 @@
       </div>
     </div>
     <div class="page-wrapper">
-      <div class="dark-box"></div>
-      <div class="content">
-        <p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</p>
-<h1 id='title-revo-api'>title: Revo API </h1>
-<hr>
-<h2 id='search-true'>search: true</h2><h1 id='3394112aa9'>Введение</h1>
+<h1 id='3394112aa9'>Введение</h1>
 <p>API Loans реализовано на протоколе HTTPS на основе JSON запросов.</p>
 <h1 id='93900fccba'>Авторизация</h1><h2 id='url'>Базовые URL адреса</h2><pre class="highlight javascript tab-javascript"><code><span class="nx">BASE_URL</span> <span class="o">=</span> <span class="s2">"https://r.revoplus.ru/"</span>
 <span class="nx">BASE_URL</span> <span class="o">=</span> <span class="s2">"https://demo.revoplus.ru/"</span>
