--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
 <td style="text-align: left"><td colspan="2"> Объект, содержащий информацию о займе.</td>
 </tr>
 <tr>
-<td style="text-align: right"><td colspan="2" style="text-align:right"><strong>authentication_token</strong><br> <font color="#939da3">string</font></td>
+<td style="text-align: right"><td colspan="2" style="text-align:right"><strong>token</strong><br> <font color="#939da3">string</font></td>
 <td style="text-align: right"></td>
 <td style="text-align: left">Токен заявки.</td>
 </tr>
