--- a/index.html
+++ b/index.html
@@ -274,13 +274,13 @@
                     <a href="#get-orders" class="toc-h2 toc-link" data-title="get-orders">Loan application ID</a>
                   </li>
                   <li>
-                    <a href="#post-returns" class="toc-h2 toc-link" data-title="post-returns">Loan bill</a>
+                    <a href="#post-returns" class="toc-h2 toc-link" data-title="post-returns">Return</a>
                   </li>
                   <li>
-                    <a href="#post-returns-id-confirm" class="toc-h2 toc-link" data-title="post-returns-id-confirm">Loan bill</a>
+                    <a href="#post-returns-id-confirm" class="toc-h2 toc-link" data-title="post-returns-id-confirm">Return confirmation</a>
                   </li>
                   <li>
-                    <a href="#post-returns-id-cancel" class="toc-h2 toc-link" data-title="post-returns-id-cancel">Loan bill</a>
+                    <a href="#post-returns-id-cancel" class="toc-h2 toc-link" data-title="post-returns-id-cancel">Return cancelation</a>
                   </li>
               </ul>
           </li>
@@ -2075,19 +2075,7 @@
 <td style="text-align: left"><td colspan="2"> Статус кредитного договора. Возможные значения: <code>confirmed</code> — подтвержден, <code>already_confirmed</code> — уже подтвержден, <code>already_cancelled</code> — уже отменен.</td>
 </tr>
 </tbody></table>
-//////
-
-
-
-
-
-
-
-
-
-
-
-<h2 id='patch-loan_requests-token-loan-bill'>Loan application ID</h2><pre class="highlight ruby tab-ruby"><code><span class="no">GET</span>  <span class="no">BASE_URL</span><span class="o">/</span><span class="n">api</span><span class="o">/</span><span class="n">loans</span><span class="o">/</span><span class="n">v1</span><span class="o">/</span><span class="n">orders</span><span class="o">/</span><span class="o">?</span><span class="n">store_id</span><span class="o">=</span><span class="p">{</span><span class="n">store_id</span><span class="p">}</span><span class="o">&</span><span class="n">filters</span><span class="p">[</span><span class="n">order_id</span><span class="p">]</span><span class="o">=</span><span class="p">{</span><span class="n">order_id</span><span class="p">}</span>
+<h2 id='get-orders'>Loan application ID</h2><pre class="highlight ruby tab-ruby"><code><span class="no">GET</span>  <span class="no">BASE_URL</span><span class="o">/</span><span class="n">api</span><span class="o">/</span><span class="n">loans</span><span class="o">/</span><span class="n">v1</span><span class="o">/</span><span class="n">orders</span><span class="o">/</span><span class="o">?</span><span class="n">store_id</span><span class="o">=</span><span class="p">{</span><span class="n">store_id</span><span class="p">}</span><span class="o">&</span><span class="n">filters</span><span class="p">[</span><span class="n">order_id</span><span class="p">]</span><span class="o">=</span><span class="p">{</span><span class="n">order_id</span><span class="p">}</span>
 </code></pre>
 <p>Метод для получения ID заявки на займ. Используется для осуществления возврата.</p>
 <h3 id='parameters-9'>Parameters</h3>
@@ -2110,15 +2098,21 @@
   <span class="p">]</span>
 <span class="p">}</span>
 </code></pre>
+<table><thead>
+<tr>
+<th style="text-align: right"></th>
+<th style="text-align: right"></th>
+<th style="text-align: left"></th>
+</tr>
 <tr>
 <td style="text-align: right"></td>
 <td style="text-align: right"><strong>orders</strong><br> <font color="#939da3">object</font></td>
-<td style="text-align: left"><td colspan="2"> Объект, содержащий информацию о займе.</td>
+<td style="text-align: left"><td colspan="2">Объект, содержащий информацию о займе.</td>
 </tr>
 <tr>
 <td style="text-align: right"></td>
 <td style="text-align: right"><strong>id</strong><br> <font color="#939da3">integer</font></td>
-<td style="text-align: left"><td colspan="2"> Уникальный идентификатор займа.</td>
+<td style="text-align: left"><td colspan="2">Уникальный идентификатор займа.</td>
 </tr>
 <tr>
 <td style="text-align: right"></td>
@@ -2156,18 +2150,12 @@
 <td style="text-align: left"><td colspan="2">ID договора займа.</td>
 </tr>
 </tbody></table>
-
-
-
-
-
-
-
-
-
-
-
-///////
+<h2 id='post-returns-id-confirm'>Return</h2><pre class="highlight ruby tab-ruby"><code><span class="no">GET</span>  <span class="no">BASE_URL</span><span class="o">/</span><span class="n">api</span><span class="o">/</span><span class="n">loans</span><span class="o">/</span><span class="n">v1</span><span class="o">/</span><span class="n">returns</span>
+</code></pre>
+<h2 id='post-returns-id-confirm'>Return confirmation</h2><pre class="highlight ruby tab-ruby"><code><span class="no">GET</span>  <span class="no">BASE_URL</span><span class="o">/</span><span class="n">api</span><span class="o">/</span><span class="n">loans</span><span class="o">/</span><span class="n">v1</span><span class="o">/</span><span class="n">returns</span><span class="o">/</span><span class="p">{</span><span class="n">loan_id</span><span class="p">}</span><span class="o">/</span><span class="n">confirm</span>
+</code></pre>
+<h2 id='post-returns-id-cancel'>Return cancelation</h2><pre class="highlight ruby tab-ruby"><code><span class="no">GET</span>  <span class="no">BASE_URL</span><span class="o">/</span><span class="n">api</span><span class="o">/</span><span class="n">loans</span><span class="o">/</span><span class="n">v1</span><span class="o">/</span><span class="n">returns</span><span class="o">/</span><span class="p">{</span><span class="n">loan_id</span><span class="p">}</span><span class="o">/</span><span class="n">cancel</span>
+</code></pre>
 <h1 id='cb76858662'>Коды ошибок</h1>
 <table><thead>
 <tr>
