--- a/index.html
+++ b/index.html
@@ -2139,9 +2139,12 @@
 </tbody></table>
 <h2 id='post-returns-id-confirm'>Return</h2><pre class="highlight ruby tab-ruby"><code><span class="no">GET</span>  <span class="no">BASE_URL</span><span class="o">/</span><span class="n">api</span><span class="o">/</span><span class="n">loans</span><span class="o">/</span><span class="n">v1</span><span class="o">/</span><span class="n">returns</span>
 </code></pre>
+<p>Метод для создания заявки на частичный или полный возврат заказа. Возвращать можно только уже финализированный заказ. Частичный возврат можно провести не ранее, чем на следующий день после финализации.</p>
 <h2 id='post-returns-id-confirm'>Return confirmation</h2><pre class="highlight ruby tab-ruby"><code><span class="no">GET</span>  <span class="no">BASE_URL</span><span class="o">/</span><span class="n">api</span><span class="o">/</span><span class="n">loans</span><span class="o">/</span><span class="n">v1</span><span class="o">/</span><span class="n">returns</span><span class="o">/</span><span class="p">{</span><span class="n">loan_id</span><span class="p">}</span><span class="o">/</span><span class="n">confirm</span>
+<p>Метод для финализации заявки на возврат.</p>
 </code></pre>
 <h2 id='post-returns-id-cancel'>Return cancelation</h2><pre class="highlight ruby tab-ruby"><code><span class="no">GET</span>  <span class="no">BASE_URL</span><span class="o">/</span><span class="n">api</span><span class="o">/</span><span class="n">loans</span><span class="o">/</span><span class="n">v1</span><span class="o">/</span><span class="n">returns</span><span class="o">/</span><span class="p">{</span><span class="n">loan_id</span><span class="p">}</span><span class="o">/</span><span class="n">cancel</span>
+<p>Метод для отмены заявки на возврат.</p>
 </code></pre>
 <h1 id='cb76858662'>Коды ошибок</h1>
 <table><thead>
