--- a/index.html
+++ b/index.html
@@ -2150,7 +2150,7 @@
         <span class="err">"</span><span class="s">order_id</span><span class="err">"</span><span class="p">:</span> <span class="s">"412"<"/span>
         <span class="err">"</span><span class="s">confirmation_code</span><span class="err">"</span><span class="p">:</span> <span class="s">"skip"</span>,
         <span class="err">"</span><span class="s">store_id</span><span class="err">"</span><span class="p">:</span> <span class="mi">267</span>,
-        <span class="err">"</span><span class="s">amount</span><span class="err">"</span><span class="p">:</span> <span class="mf">null</span>
+        <span class="err">"</span><span class="s">amount</span><span class="err">"</span><span class="p">:</span> <span class="mf">"4455.00"</span>
     <span class="p">}</span>
 <span class="p">}</span>
 </code></pre>
