--- a/index.html
+++ b/index.html
@@ -174,6 +174,18 @@
 .highlight {
   color: #ffffff;
 }
+.highlight {
+  color: #ffffff;
+}
+.highlight {
+  color: #ffffff;
+}
+.highlight {
+  color: #ffffff;
+}
+.highlight {
+  color: #ffffff;
+}
 .highlight .n, .highlight .py, .highlight .nx {
   color: #ffffff;
 }
@@ -270,6 +282,19 @@
                   <li>
                     <a href="#patch-loan_requests-token-loan-bill" class="toc-h2 toc-link" data-title="patch-loan_requests-token-loan-bill">Loan bill</a>
                   </li>
+                  <li>
+                    <a href="#get-orders" class="toc-h2 toc-link" data-title="get-orders">Loan application ID</a>
+                  </li>
+                  <li>
+                    <a href="#post-returns" class="toc-h2 toc-link" data-title="post-returns">Return</a>
+                  </li>
+                  <li>
+                    <a href="#post-returns-id-confirm" class="toc-h2 toc-link" data-title="post-returns-id-confirm">Return confirmation</a>
+                  </li>
+                  <li>
+                    <a href="#post-returns-id-cancel" class="toc-h2 toc-link" data-title="post-returns-id-cancel">Return cancelation</a>
+                  </li>
+
               </ul>
           </li>
           <li>
