--- a/index.html
+++ b/index.html
@@ -171,19 +171,19 @@
 .highlight .w {
   color: #ffffff;
 }
-.highlight {
+.highlight  .rt{
   color: #ffffff;
 }
-.highlight {
+.highlight .dg{
   color: #ffffff;
 }
-.highlight {
+.highlight .sa{
   color: #ffffff;
 }
-.highlight {
+.highlight .fr{
   color: #ffffff;
 }
-.highlight {
+.highlight .fe{
   color: #ffffff;
 }
 .highlight .n, .highlight .py, .highlight .nx {
