--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 .highlight .fr{
   color: #ffffff;
 }
-.highlight .fe{
+.highlight.fe{
   color: #ffffff;
 }
 .highlight .n, .highlight .py, .highlight .nx {
@@ -2217,12 +2217,14 @@
 <h3 id='response-parameters-14'>Response Parameters</h3>
 <blockquote>
 <p>Пример ответа при успешной аутентификации (code 200).</p>
+</blockquote>
 <h2 id='post-returns-id-cancel'>Return cancelation</h2><pre class="highlight ruby tab-ruby"><code><span class="no">GET</span>  <span class="no">BASE_URL</span><span class="o">/</span><span class="n">api</span><span class="o">/</span><span class="n">loans</span><span class="o">/</span><span class="n">v1</span><span class="o">/</span><span class="n">returns</span><span class="o">/</span><span class="p">{</span><span class="n">loan_id</span><span class="p">}</span><span class="o">/</span><span class="n">cancel</span>
 </code></pre>
 <p>Метод для отмены заявки на возврат.</p>
 <h3 id='response-parameters-14'>Response Parameters</h3>
 <blockquote>
 <p>Пример ответа при успешной аутентификации (code 200).</p>
+</blockquote>
 <h1 id='cb76858662'>Коды ошибок</h1>
 <table><thead>
 <tr>
