--- a/index.html
+++ b/index.html
@@ -2162,6 +2162,10 @@
 <td style="text-align: left"><td colspan="2">ID договора займа.</td>
 </tr>
 </tbody></table>
+<h3 id='response-parameters-14'>Response Parameters</h3>
+<blockquote>
+<p>Пример ответа при успешной аутентификации (code 200).</p>
+</blockquote>
 <h2 id='post-returns-id-confirm'>Return</h2><pre class="highlight ruby tab-ruby"><code><span class="no">GET</span>  <span class="no">BASE_URL</span><span class="o">/</span><span class="n">api</span><span class="o">/</span><span class="n">loans</span><span class="o">/</span><span class="n">v1</span><span class="o">/</span><span class="n">returns</span>
 </code></pre>
 <p>Метод для создания заявки на частичный или полный возврат заказа. Возвращать можно только уже финализированный заказ. Частичный возврат можно провести не ранее, чем на следующий день после финализации.</p>
