--- a/index.html
+++ b/index.html
@@ -171,20 +171,9 @@
 .highlight .w {
   color: #ffffff;
 }
-.highlight .rt{
+.highlight {
   color: #ffffff;
 }
-.highlight .dg{
-  color: #ffffff;
-}
-.highlight .sa{
-  color: #ffffff;
-}
-.highlight .fr{
-  color: #ffffff;
-}
-.highlight.fe{
-  color: #ffffff;
 }
 .highlight .n, .highlight .py, .highlight .nx {
   color: #ffffff;
@@ -2162,7 +2151,7 @@
 <td style="text-align: left"><td colspan="2">ID договора займа.</td>
 </tr>
 </tbody></table>
-<h2 id='post-returns-id-confirm'>Return</h2><pre class="highlight ruby tab-ruby"><code><span class="no">GET</span>  <span class="no">BASE_URL</span><span class="o">/</span><span class="n">api</span><span class="o">/</span><span class="n">loans</span><span class="o">/</span><span class="n">v1</span><span class="o">/</span><span class="n">returns</span>
+<h2 id='post-returns'>Return</h2><pre class="highlight ruby tab-ruby"><code><span class="no">GET</span>  <span class="no">BASE_URL</span><span class="o">/</span><span class="n">api</span><span class="o">/</span><span class="n">loans</span><span class="o">/</span><span class="n">v1</span><span class="o">/</span><span class="n">returns</span>
 </code></pre>
 <p>Метод для создания заявки на частичный или полный возврат заказа. Возвращать можно только уже финализированный заказ. Частичный возврат можно провести не ранее, чем на следующий день после финализации.</p>
 <h3 id='response-parameters-14'> Parameters</h3>
