--- a/index.html
+++ b/index.html
@@ -2191,7 +2191,7 @@
 </tr>
 <tr>
 <td style="text-align: right"></td>
-<td style="text-align: right"><strong>store_id</strong><br> <font color="#939da3">string</font></td>
+<td style="text-align: right"><strong>store_id</strong><br> <font color="#939da3">integers</font></td>
 <td style="text-align: left"><td colspan="2">Идентификатор торговой точки. Создается на стороне Mokka.</td>
 </tr>
 <tr>
